2010-04-14  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help.xsl (configure_escalators.html): Comments are
	not mandatory for escalators.

2010-04-14  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help.xsl (configure_schedules.html): Added help for
	scheduling.

2010-04-13  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help.xsl: Flush trailing whitespace.

2010-04-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/CMakeLists.txt: Fix some installation directives to
	make the login dialog appear properly.

2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/make_html, src/html/header.m4, src/html/template.m4,
	src/html/footer.m4: Removed.

	* src/CMakeLists.txt: Instead of insalling the build directory
	do direct installation.

2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/gsad.xsl: Changed URL for about page.

	* src/html/src/help.xsl: Added content of pages "about" and "gplv2".

	* src/html/src/about.htm4, src/html/src/gplv2.htm4: Removed.

2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Static help files are not necessary anymore.

	* src/html/make_html: Don't create directory "help".

	* src/html/src/help/view_report.htm4,
	src/html/src/help/scanconfig_nvt_details.htm4,
	src/html/src/help/scanconfig_editor_nvt.htm4,
	src/html/src/help/configure_targets.htm4,
	src/html/src/help/new_task.htm4,
	src/html/src/help/scanconfig_details.htm4,
	src/html/src/help/scanconfig_editor_nvt_families.htm4,
	src/html/src/help/scanconfig_editor.htm4,
	src/html/src/help/error_messages.htm4,
	src/html/src/help/scanconfig_family_details.htm4,
	src/html/src/help/configure_agents.htm4,
	src/html/src/help/tasks.htm4,
	src/html/src/help/notes.htm4,
	src/html/src/help/nvts.htm4,
	src/html/src/help/contents.htm4,
	src/html/src/help/reports.htm4,
	src/html/src/help/configure_scanconfigs.htm4,
	src/html/src/help/configure_credentials.htm4,